--- a/docs/howtos/quick-start/cheat-sheets/streams.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/streams.mdx
@@ -29,11 +29,11 @@ import TabItem from '@theme/TabItem';
     </tr>
     <tr>
       <td>XADD</td>
-      <td>XADD key ID field string [field string ...]</td>
+      <td>XADD key field value [field value ...]</td>
       <td>
         <pre>
           <code>{`
-XADD mystream * sensor-id 1234 temperature 19.8
+XADD myStream * sensorId "1234" temperature "19.8"
 `}</code>
         </pre>
       </td>
@@ -41,7 +41,9 @@ XADD mystream * sensor-id 1234 temperature 19.8
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Appends a new entry to a stream.
+        <em>Description:</em> Appends the specified stream entry to the stream
+        at the specified key. <em>Time Complexity:</em> O(1) when adding a new
+        entry.
       </td>
     </tr>
     <tr>
@@ -53,18 +55,20 @@ XADD mystream * sensor-id 1234 temperature 19.8
       <td>
         <pre>
           <code>{`
-XREAD COUNT 2 STREAMS mystream 1518951480106-0
+XREAD COUNT 2 STREAMS myStream 0
 `}</code>
         </pre>
       </td>
       <td>
-        1) 1) "mystream" 2) 1) 1) "1518951480106-0" 2) 1) "sensor-id" 2) "1234"
+        1) 1) "myStream" 2) 1) 1) "1518951480106-0" 2) 1) "sensorId" 2) "1234"
         3) "temperature" 4) "19.8"
       </td>
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Reads data from one or multiple streams.
+        <em>Description:</em> Read data from one or multiple streams, only
+        returning entries with an <b>ID greater</b> than the last received ID
+        reported by the caller.
       </td>
     </tr>
     <tr>
@@ -73,19 +77,21 @@ XREAD COUNT 2 STREAMS mystream 1518951480106-0
       <td>
         <pre>
           <code>{`
-XRANGE mystream 1518951480106-0 1518951480106-0
+XRANGE myStream 1518951480106-0 1518951480106-0
 `}</code>
         </pre>
       </td>
       <td>
-        1) 1) 1) "1518951480106-0" 2) 1) "sensor-id" 2) "1234" 3) "temperature"
+        1) 1) 1) "1518951480106-0" 2) 1) "sensorId" 2) "1234" 3) "temperature"
         4) "19.8"
       </td>
     </tr>
     <tr>
       <td colspan="4">
         <em>Description:</em> Returns the entries matching a range of IDs in a
-        stream.
+        stream. <em>Time Complexity:</em> O(N) with N being the number of
+        elements being returned. If N is constant (e.g. always asking for the
+        first 10 elements with COUNT), you can consider it O(1).
       </td>
     </tr>
     <tr>
@@ -94,7 +100,7 @@ XRANGE mystream 1518951480106-0 1518951480106-0
       <td>
         <pre>
           <code>{`
-XLEN mystream
+XLEN myStream
 `}</code>
         </pre>
       </td>
@@ -102,7 +108,8 @@ XLEN mystream
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Returns the number of entries of a stream.
+        <em>Description:</em> Returns the number of entries of a stream.{' '}
+        <em>Time Complexity:</em> O(1)
       </td>
     </tr>
     <tr>
@@ -111,7 +118,7 @@ XLEN mystream
       <td>
         <pre>
           <code>{`
-XDEL mystream 1518951480106-0
+XDEL myStream 1518951480106-0
 `}</code>
         </pre>
       </td>
@@ -119,7 +126,9 @@ XDEL mystream 1518951480106-0
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Removes the specified entries from a stream.
+        <em>Description:</em> Removes the specified entries from a stream.{' '}
+        <em>Time Complexity:</em> O(1) for each single item to delete in the
+        stream
       </td>
     </tr>
     <tr>
@@ -128,7 +137,7 @@ XDEL mystream 1518951480106-0
       <td>
         <pre>
           <code>{`
-XTRIM mystream MAXLEN 0
+XTRIM myStream MAXLEN 0
 `}</code>
         </pre>
       </td>
@@ -136,7 +145,11 @@ XTRIM mystream MAXLEN 0
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Trims the stream to a different length.
+        <em>Description:</em> Trims the stream to a different length.{' '}
+        <em>Time Complexity:</em> O(N), with N being the number of evicted
+        entries. Constant times are very small however, since entries are
+        organized in macro nodes containing multiple entries that can be
+        released with a single deallocation.
       </td>
     </tr>
   </tbody>
@@ -145,6 +158,80 @@ XTRIM mystream MAXLEN 0
 </TabItem>
 
 <TabItem value="NODE_JS">
+
+```js
+/*
+XADD key field value [field value ...]
+Appends the specified stream entry to the stream at the specified key.
+O(1) when adding a new entry.
+*/
+
+const xAddResult = await client.xAdd(
+  'myStream',
+  '*', //dynamic id
+  {
+    sensorId: '1234',
+    temperature: '19.8',
+  },
+);
+console.log(xAddResult); // "1518951480106-0"
+
+/*
+    XREAD [COUNT count] [BLOCK milliseconds] STREAMS key [key ...] ID [ID ...]
+    Read data from one or multiple streams, only returning entries with an ID greater than the last received ID reported by the caller.
+    */
+const xReadResult = await client.xRead(
+  commandOptions({
+    isolated: true,
+  }),
+  [
+    {
+      // XREAD can read from multiple streams, starting at a different ID for each.
+      key: 'myStream',
+      id: '0', //entries greater than id
+    },
+  ],
+  {
+    // Read 2 entries at a time, block for 5 seconds if there are none.
+    COUNT: 2,
+    BLOCK: 5000,
+  },
+);
+
+console.log(JSON.stringify(xReadResult)); // [{"name":"myStream","messages":[{"id":"1518951480106-0","message":{"sensorId":"1234","temperature":"19.8"}}]}]
+
+/*
+    XRANGE key start end [COUNT count]
+    Returns the entries matching a range of IDs in a stream.
+    O(N) with N being the number of elements being returned. If N is constant (e.g. always asking for the first 10 elements with COUNT), you can consider it O(1).
+    */
+const xRangeResult = await client.xRange('myStream', xAddResult, xAddResult);
+console.log(JSON.stringify(xRangeResult)); // [{"id":"1518951480106-0","message":{"sensorId":"1234","temperature":"19.8"}}]
+
+/*
+    XLEN key
+    Returns the number of entries of a stream.
+    O(1)
+    */
+const xLenResult = await client.xLen('myStream');
+console.log(xLenResult); // 1
+
+/*
+    XDEL key ID [ID ...]
+    Removes the specified entries from a stream.
+    O(1) for each single item to delete in the stream
+    */
+const xDelResult = await client.xDel('myStream', xAddResult);
+console.log(xDelResult); // 1
+
+/*
+    XTRIM key MAXLEN [~] count
+    Trims the stream to a different length.
+    O(N), with N being the number of evicted entries. Constant times are very small however, since entries are organized in macro nodes containing multiple entries that can be released with a single deallocation.
+    */
+const xTrimResult = await client.xTrim('myStream', 'MAXLEN', 0);
+console.log(xTrimResult); // 0
+```
 
 </TabItem>
 
