--- a/docs/howtos/quick-start/cheat-sheets/json.mdx
+++ b/docs/howtos/quick-start/cheat-sheets/json.mdx
@@ -29,7 +29,7 @@ import TabItem from '@theme/TabItem';
     </tr>
     <tr>
       <td>JSON.SET</td>
-      <td>JSON.SET key path json [NX | XX]</td>
+      <td>JSON.SET key path value</td>
       <td>
         <pre>
           <code>{`
@@ -42,14 +42,13 @@ JSON.SET employee_profile:1 . '{"name":"Alice"}'
     <tr>
       <td colspan="4">
         <em>Description:</em> Sets JSON value at path in key.
+        <em>Time Complexity:</em> O(M+N) where M is the original size and N is the
+        new size
       </td>
     </tr>
     <tr>
       <td>JSON.GET</td>
-      <td>
-        JSON.GET key [INDENT indentation-string] [NEWLINE line-break-string]
-        [SPACE space-string] [path]
-      </td>
+      <td>JSON.GET key [path [path ...]]</td>
       <td>
         <pre>
           <code>{`
@@ -68,6 +67,9 @@ JSON.GET employee_profile:1
     <tr>
       <td colspan="4">
         <em>Description:</em> Returns the JSON value at path in key.
+        <em>Time Complexity:</em> O(N) when path is evaluated to a single value where
+        N is the size of the value, O(N) when path is evaluated to multiple values,
+        where N is the size of the key
       </td>
     </tr>
     <tr>
@@ -86,6 +88,9 @@ JSON.NUMINCRBY employee_profile:1 .age 5
     <tr>
       <td colspan="4">
         <em>Description:</em> Increments a number inside a JSON document.
+        <em>Time Complexity:</em> O(1) when path is evaluated to a single value,
+        O(N) when path is evaluated to multiple values, where N is the size of the
+        key
       </td>
     </tr>
     <tr>
@@ -103,7 +108,9 @@ JSON.OBJKEYS employee_profile:1
     <tr>
       <td colspan="4">
         <em>Description:</em> Return the keys in the object that's referenced by
-        path
+        path. <em>Time Complexity:</em> O(N) when path is evaluated to a single
+        value, where N is the number of keys in the object, O(N) when path is
+        evaluated to multiple values, where N is the size of the key
       </td>
     </tr>
     <tr>
@@ -121,12 +128,14 @@ JSON.OBJLEN employee_profile:1
     <tr>
       <td colspan="4">
         <em>Description:</em> Report the number of keys in the JSON object at
-        path in key
+        path in key. <em>Time Complexity:</em> O(1) when path is evaluated to a
+        single value, O(N) when path is evaluated to multiple values, where N is
+        the size of the key
       </td>
     </tr>
     <tr>
       <td>JSON.ARRAPPEND</td>
-      <td>JSON.ARRAPPEND key path json...</td>
+      <td>JSON.ARRAPPEND key [path] value [value ...]</td>
       <td>
         <pre>
           <code>{`
@@ -135,17 +144,19 @@ JSON.ARRAPPEND employee_profile:1 .colors '"yellow"'
 `}</code>
         </pre>
       </td>
-      <td>(integer) 3</td>
+      <td>(integer) 4</td>
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Appends the specified JSON value(s) to the JSON
-        array at the specified path.
+        <em>Description:</em> Append the json values into the array at path
+        after the last element in it. <em>Time Complexity:</em> O(1) for each
+        value added, O(N) for multiple values added where N is the size of the
+        key
       </td>
     </tr>
     <tr>
       <td>JSON.ARRINSERT</td>
-      <td>JSON.ARRINSERT key path index json...</td>
+      <td>JSON.ARRINSERT key path index value [value ...]</td>
       <td>
         <pre>
           <code>{`
@@ -157,13 +168,16 @@ JSON.ARRINSERT employee_profile:1 .colors 2 '"purple"'
     </tr>
     <tr>
       <td colspan="4">
-        <em>Description:</em> Inserts the JSON value(s) in the JSON array at the
-        specified path.
+        <em>Description:</em> Insert the json values into the array at path
+        before the index (shifts to the right). <em>Time Complexity:</em> O(N)
+        when path is evaluated to a single value where N is the size of the
+        array, O(N) when path is evaluated to multiple values, where N is the
+        size of the key
       </td>
     </tr>
     <tr>
       <td>JSON.ARRINDEX</td>
-      <td>JSON.ARRINDEX key path json [start [stop]]</td>
+      <td>JSON.ARRINDEX key path value [start [stop]]</td>
       <td>
         <pre>
           <code>{`
@@ -176,7 +190,9 @@ JSON.ARRINDEX employee_profile:1 .colors '"purple"'
     <tr>
       <td colspan="4">
         <em>Description:</em> Searches for the first occurrence of a JSON value
-        in an array.
+        in an array. <em>Time Complexity:</em> O(N) when path is evaluated to a
+        single value where N is the size of the array, O(N) when path is
+        evaluated to multiple values, where N is the size of the key
       </td>
     </tr>
   </tbody>
@@ -185,6 +201,97 @@ JSON.ARRINDEX employee_profile:1 .colors '"purple"'
 </TabItem>
 
 <TabItem value="NODE_JS">
+
+```js
+/*
+      JSON.SET key path value
+      Sets JSON value at path in key.
+      O(M+N) where M is the original size and N is the new size
+    */
+const setResult = await client.json.set('employee_profile:1', '.', {
+  name: 'Alice',
+});
+console.log(setResult); // OK
+
+/*
+       JSON.GET key [path [path ...]]
+       Returns the JSON value at path in key.
+       O(N) when path is evaluated to a single value where N is the size of the value, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+const getResult = await client.json.get('employee_profile:1');
+console.log(getResult); // { name: 'Alice' }
+
+/*
+      JSON.NUMINCRBY key path number
+      Increments a number inside a JSON document.
+      O(1) when path is evaluated to a single value, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+await client.json.set('employee_profile:1', '.age', 30);
+const incrementResult = await client.json.numIncrBy(
+  'employee_profile:1',
+  '.age',
+  5,
+);
+console.log(incrementResult); // 35
+
+/*
+      JSON.OBJKEYS key [path]
+      Return the keys in the object that's referenced by path
+      O(N) when path is evaluated to a single value, where N is the number of keys in the object, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+const objKeysResult = await client.json.objKeys('employee_profile:1');
+console.log(objKeysResult); // [ 'name', 'age' ]
+
+/*
+      JSON.OBJLEN key [path]
+      Report the number of keys in the JSON object at path in key
+      O(1) when path is evaluated to a single value, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+const objLenResult = await client.json.objLen('employee_profile:1');
+console.log(objLenResult); // 2
+
+/*
+      JSON.ARRAPPEND key [path] value [value ...]
+      Append the json values into the array at path after the last element in it
+      O(1) for each value added, O(N) for multiple values added where N is the size of the key
+    */
+await client.json.set('employee_profile:1', '.colors', [
+  'red',
+  'green',
+  'blue',
+]);
+const arrAppendResult = await client.json.arrAppend(
+  'employee_profile:1',
+  '.colors',
+  'yellow',
+);
+console.log(arrAppendResult); // 4
+
+/*
+      JSON.ARRINSERT key path index value [value ...]
+      Insert the json values into the array at path before the index (shifts to the right)
+      O(N) when path is evaluated to a single value where N is the size of the array, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+const arrInsertResult = await client.json.arrInsert(
+  'employee_profile:1',
+  '.colors',
+  2,
+  'purple',
+);
+console.log(arrInsertResult); // 5
+
+/*
+      JSON.ARRINDEX key path json [start [stop]]
+      Searches for the first occurrence of a JSON value in an array.
+      O(N) when path is evaluated to a single value where N is the size of the array, O(N) when path is evaluated to multiple values, where N is the size of the key
+    */
+const arrIndexResult = await client.json.arrIndex(
+  'employee_profile:1',
+  '.colors',
+  'purple',
+);
+console.log(arrIndexResult); // 2
+```
 
 </TabItem>
 
